# ai-short-video-research

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
config/: pipeline.yaml  quality_thresholds.yaml
docs/: 00-navigation.md  01-open-source-landscape.md  02-evaluation-tools.md  03-self-correction-patterns.md  04-commercial-landscape.md  05-gap-analysis.md  06-architecture-proposal.md  07-workflow-analysis.md  08-best-practices.md  09-commercial-production-guide.md  10-comprehensive-automated-workflow.md  10-ultimate-guide.md  11-one-click-best-practices.docx  11-one-click-best-practices.md  11-the-ultimate-ai-video-handbook.md  12-ad-production-playbook.md  13-youtube-creator-census.md  14-ultimate-action-plan.md  AI_VIDEO_PRODUCTION_MASTER_BOOK_2026.docx  AI_VIDEO_PRODUCTION_MASTER_BOOK_2026.md  wechat-account-name.md  wechat-article-01.md
docs/cases/smart-sleep-pillow-promo/: 01-planning-and-creativity.md  02-scriptwriting-veo-realistic.md  02-scriptwriting.md  03-ai-video-generation.md  04-voiceover-audio.md  05-post-production-delivery.md  06-seedance-workflow-report.md
src/: __init__.py  cli.py  server.py  web_ui.py
src/correction/: __init__.py  diagnosis.py  prompt_rewriter.py
src/pipeline/: __init__.py  composer.py  orchestrator.py
src/pipeline/generators/: __init__.py  ai_video.py  bgm.py  script.py  (+3 more)
src/quality_gate/: __init__.py  __main__.py  aggregator.py  clip_scorer.py  config.yaml  layer1_programmatic.py  layer2_ml.py  layer3_vlm.py
src/utils/: __init__.py  frame_sampler.py  metrics.py
tests/: test_aggregator.py  test_correction.py  test_generators.py  test_layer1.py  test_layer2.py  test_orchestrator.py  test_phase5.py
tests/fixtures/: sample.srt
